<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapCharades</string>
    <string name="title_section1">Challenges</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="usernameField">Username</string>
    <string name="passwordField">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="login_button_text">Login</string>
    <string name="signUpButtonField">Sign Up</string>
    <string name="emailField">Email</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="error_title">Oops!</string>
    <string name="logout_button">Logout</string>
    <string name="edit_friends">Add Friends</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends!</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="empty_friends_message">Add friends!</string>
    <string name="menu_camera_label">Camera</string>
<<<<<<< HEAD
    <string name="title_activity_recipients">Recipients</string>
    <string name="SendButton">Send</string>
    <string name="title_activity_new_image">NewImageActivity</string>
=======
>>>>>>> 58fc8ad28b2e65c3b73995196ca84dff70d69719

</resources>
