<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_edit_friends"
        android:orderInCategory="100"
        android:title="@string/edit_friends"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="100"
        android:title="@string/menu_camera_label"
        app:showAsAction="always" />
</menu>
